add dvc to v1.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ venv/
 __pycache__/
 *.pyc
 
-# data versions are large and generated; ignore them in Git
-data/versions/
+data/raw/
+data/versions/demo-wikitext-v1.0.0/
+data/processed/demo-wikitext-v1.1.0/
